{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "31d50b4c-3b55-478b-a935-3a7f29097256",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "0bef072e-19de-4d36-aea5-d48e722963db",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateAntiGravity",
                    "type": "Button",
                    "id": "45a1bce4-bbe5-4058-8a40-76dd16bc7cb1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitInspect",
                    "type": "Button",
                    "id": "f9dbe0c9-e997-4e5f-b468-28e81f7f70a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateInpectedObject",
                    "type": "Button",
                    "id": "dbae06a9-347d-4ab7-8fb7-da82d3ff39b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64e4786f-a437-4765-a2b4-0d92571d9f88",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d826636-5f3a-4568-b4c9-bfe96789050b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2fcea8a-2649-4d26-9bbc-2f88c58488ca",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateAntiGravity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7f6c82e-7958-4b5c-8d30-eecad34684a6",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitInspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07858e3-05f8-4a8e-94ba-5353b14427d0",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateInpectedObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}